Corects spacing issue

--- a/_sass/_navigation-header.scss
+++ b/_sass/_navigation-header.scss
@@ -12,6 +12,10 @@ $max-container: 1440px;
     padding: 10px 0 6px;
     position: relative;
     z-index: 0;
+    box-sizing: content-box;
+    & * {
+        box-sizing: content-box;
+    }
     @media screen and (min-width: $header-banner-min-width) {
         z-index: 9;
         overflow: visible;
@@ -20,6 +24,7 @@ $max-container: 1440px;
     > .navigation-container {
         max-width: 1440px;
         position: relative;
+        box-sizing: content-box;
         @media screen and (min-width: 740px) and (max-width: 1045px) {
             padding: 0 20px;
         }
@@ -47,6 +52,7 @@ $max-container: 1440px;
             text-indent: 100%;
             position: relative;
             left: min(80px, calc(100% - $header-banner-min-width));
+            box-sizing: content-box;
             @media screen and (max-width: 1339px) {
                 left: 0;
             }
@@ -175,11 +181,11 @@ $max-container: 1440px;
                             }
                         }
                     }
-                    @media screen and (min-width: 1150px) and (max-width: 1249px) {
-                        margin-right: 10px;
+                    @media screen and (min-width: 1150px) and (max-width: 1369px) {
+                        margin-right: 15px;
                     }
-                    @media screen and (min-width: 1250px) {
-                        margin-right: 20px;
+                    @media screen and (min-width: 1370px) {
+                        margin-right: 30px;
                     }
                     > .nested-nav--top-menu-item-wrapper {
                         display: block;
